Fixing layout problems in the mobile navigation.

--- a/modules/cms/ui/themes/default/style/openrat-workbench.less
+++ b/modules/cms/ui/themes/default/style/openrat-workbench.less
@@ -222,11 +222,14 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
             @media @smartphones {
                 width: 0;
+                padding: 0;
             }
 
             &--is-open {
 
                 @media @smartphones {
+                    padding: 0.8em;
+                    position: fixed;
                     overflow-y: auto;
                     width: 90%;
                     border-right: 1px solid;
